Added is loggedIn to check if the user is logged in and also secured all route
